text won't be lost when form is invalid

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -54,7 +54,7 @@
     $(function() {
         $('#summernote').summernote({
             lang: 'zh-CN'
-        });
+        }).code(' {{ text|safe }}');
         $('form').submit(function(e) {
             $('#text').val($('#summernote').code());
             return;
