--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,6 +9,7 @@
       <script src="{{ STATIC_URL }}j/html5shiv.js"></script>
     <![endif]-->
     <link href="{{ STATIC_URL }}bs/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}fa/css/font-awesome.min.css" rel="stylesheet">
     {% block css %}{% endblock %}
     <style type="text/css">body{padding-bottom:30px;padding-top:70px;}</style>
   </head>
@@ -26,7 +27,8 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">首页</a></li>
+            <li><a href="{% url index %}">首页</a></li>
+            <li><a href="{% url create %}">新建</a></li>
           </ul>
         </div>
       </div>
