--- a/website/templates/detail.html
+++ b/website/templates/detail.html
@@ -1,13 +1,19 @@
 {% extends "base.html" %}
 
+{% block title %}
+{{ entry.title }}
+{% endblock %}
+
+{% block css %}
+<link href="{{ STATIC_URL }}sn/summernote.css" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
 <div class="page-header">
-  <h1>{{ title }}</h1>
+  <h1>{{ entry.title }}</h1>
 </div>
-{% if main_image %}
-<h2> 题图 </h2>
-<img src="{{ main_image }}">
+{% if entry.cover %}
+<p><img src="{{ entry.cover }}"></p>
 {% endif %}
-<h2> 文章 </h2>
-<div>{{ text|safe }}</div>
+<div>{{ entry.text|safe }}</div>
 {% endblock %}
