Change editor toolbar.

--- a/website/templates/create.html
+++ b/website/templates/create.html
@@ -17,7 +17,6 @@ Ermiao WYSIWYG Editor
       <span class="help-block">{{ form.title.errors|join:"<br />" }}</span>
       {% endif %}
       <input class="form-control" type="text" name="title" id="id_title" value="{{ form.title.value|default:'' }}">
-      {{ form.title.errors }}
     </div>
     <div class="form-group{% if form.text.errors %} has-error{% endif %}">
       <label class="control-label" for="content">Content</label>
@@ -25,7 +24,6 @@ Ermiao WYSIWYG Editor
       <span class="help-block">{{ form.text.errors|join:"<br />" }}</span>
       {% endif %}
       <input type="hidden" id="text" name="text">
-      {{ form.text.errors }}
       <div class="form-control" id="summernote"></div>
     </div>
     <div class="form-group">
@@ -47,6 +45,15 @@ Ermiao WYSIWYG Editor
         $('#summernote').summernote({
             lang: 'zh-CN',
             height: "300px",
+            toolbar: [
+                ['all', ['clear']],
+                ['style', ['bold', 'italic', 'underline', 'strikethrough']],
+                ['font', ['fontsize']],
+                ['color', ['color']],
+                ['para', ['ul', 'ol', 'paragraph']],
+                ['insert', ['link', 'picture', 'video', 'hr']],
+                ['misc', ['fullscreen', 'codeview']]
+            ],
             onImageUpload: function(files, editor, welEditable) {
                 sendFile(files[0], editor, welEditable);
             }
